--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ name = "simple-rust-rest"
 version = "0.1.0"
 authors = ["Ruslan Kazakov <ruslan.kazakov@gmail.com>"]
 
-[dependencies.nickel]
-version = "*"
+[dependencies]
+nickel = "*"
